# credit_scoring

./: .coverage  .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/: hw11_antifraud_rules.ipynb
notebooks/hw2/: hw21.ipynb  hw22.ipynb
notebooks/hw3.1/: hw31.py
notebooks/hw3.2/: hw32.ipynb
notebooks/hw5/: hw5.ipynb
notebooks/hw6/: README.md  train_models.py  utils.py
notebooks/hw6/models/: decision_tree.pkl  gradient_boosting.pkl  logistic_regression.pkl
notebooks/hw6/results/: model_metrics.csv
notebooks/hw7/: config.py  hw7.ipynb  model_advanced.pkl
pipeline/: dvc.yaml
scripts/: prepare_hw6_scoring_core_artifacts.py
src/app/antifraud/: __init__.py  service.py
src/app/core/: api.py  calculator.py  feature_frame.py  model.py  validation.py
src/app/modelling/features/: application_features.py  bureau_balance_features.py  bureau_features.py
src/app/modelling/pipelines/: build_application_features.py  build_bureau_balance_features.py  build_bureau_features.py  extract_raw_tables.py
src/app/scoring/: hw9.ipynb
src/app/utils/: db_manager.py
src/config/: db_config.py
src/tests/core/: conftest.py  test_calculator.py
